add auth and logger middlewares

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ DB_AUTOLOADENTITIES=true
 
 # Authorization Properties
 JWT_SECRET=replaceit
+ACCESS_TOKEN_VALIDITY_DAYS=
+REFRESH_TOKEN_VALIDITY_DAYS=
+RESET_PASSWORD_EXPIRATION_MINUTES=
+TOKEN_ISSUER=
+TOKEN_AUDIENCE=
 # --------------------------
 
 # Properties for API
