add file upload with cloudinary

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,10 @@ TOKEN_AUDIENCE=
 API_GLOBAL_PREFIX=api
 API_GLOBAL_VERSION=v1
 # -------------------------
+
+# Properties for Cloudinary/online file storage
+CLOUDINARY_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_IS_SECURE=true
+# --------------------------
