--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.28.1",
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
