add mail reminder

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,10 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_IS_SECURE=true
 # --------------------------
+
+# Properties for emailer lib
+SENDER_NAME=
+SENDER_EMAIL=
+EMAIL_AUTH_USERNAME=
+EMAIL_AUTH_PASSWORD=
+# -------------------------
